@startuml
title Zeldiablo

interface Jeu {
    +evoluer(Commande): void
    +etreFini(): boolean
    +setFini(boolean):void
}

class InterfaceGraphique{
    -panel : PanelDessin
    -controleur : Controleur
    +InterfaceGraphique(DessinJeu,int,int)
    +getControleur():Controleur
    +dessiner():void
}

class JeuPrincipal {
    -level: int
    +JeuPrincipal()
    -chargerLVL(int) :void 
    -chargerJSON(String): JSONObject
    -decoderJSON(JSONObject): Labyrinthe
    +getLVL(): int
    +main(String[]):void
    
}

class JeuEvolution {
    -compteur_pas : int
    -direction: boolean
    -fini: boolean
    +Aventurier: aventurier
    +JeuEvolution(Aventurier)
    +evoluer(Commande): void
    +etreFini(): boolean
    +setFini(boolean):void
    +isDirection(): boolean
    +getCompteur_pas(): int
    +setAventurier(Aventurier): void
}


interface DessinJeu {
    +dessiner(BuffuredImage) : void
}

class Menu{
    +Menu()
    +disparaitre():void
    +visible : boolean
    #paintComponent(Graphics):void
}

class DessinPerso {
    -compteur: int
    -mur:  Image
    -porte: Image
    -casevide : Image
    -casePiege : Image
    -persoDroite : Image[]
    -persoGauche : Image[]
    -slime_vert: Image
    -slime_rouge: Image
    -slime_violet: Image
    +{static}TAILLE_CASE: int
    +DessinPerso(JeuEvolution)
    +dessine(BuffuredImage): void
    +gestionVie(Graphics2D): void
}
class MoteurGraphique{
    +MoteurGraphique(ArrayList<Jeu>,DessinJeu)
    +lancerJeu(int,int):void
}
class Labyrinthe {
    -{static}TAILLE_MIN: int
    -{static}TAILLE_MAX: int
    +Labyrinthe()
    +Labyrinthe(String[])
    +caseTraversable(int,int) : boolean
    +estSurUnObstacle(int,int) : boolean
    +activerPiege(int,int):void
    +testerPiege(int,int):boolean
    +typeCase(int, int): int
    +toString():String
    +getLargeur():int
    +getHauteur():int
    -valideModele(String[]):boolean
    -defautLabyrinthe():void
}


abstract Entite {
    #x: int
    #y: int
    #pv: int
    #pvMax: int
    #nom: String
    #vivant: boolean
    #labyrinthe: Labyrinthe

    +Entite(int, int, int, String)
    +getVivant(): boolean
    +getNom(): String
    +setLabyrinthe(Labyrinthe) : void
    +getLab(): Labyrinthe
    +getPv(): int
    +getPvMax(): int
    +getX(): int
    +getY(): int
    +{abstract}seDeplacer(char): void
    +{abstract}peutAvancer(int,int): boolean
    +subirDegat(int): void
    +mort(): void
}

class Aventurier {

    +Aventurier(int, int int, String)
    +seDeplacer(char): void
    +peutAvancer(int, int): boolean
}

abstract Monstre {
    #id: int
    #portee : int
    #degat: int
    +Monstre(int, int, int, int, int, int, String)
    +peutAvancer(int, int): boolean
    +attaquer(Aventurier): void
    +seDeplacer(char): void
}

class MonstreAleatoire {

    +MonstreAleatoire(int, int, int, int, int, int, String)
    +seDeplacer(char):void
}

class MonstreSuivi {
    #cible: Aventurier

    +MonstreSuivi(int, int, int, int, int, int, String)
    +seDeplacer(char): void
    #calculChemin(): char
    +ajouterCible(Aventurier): void
}

class MonstreImmobile {

    +MonstreImmobile(int, int, int, int, int, int, String)
    +seDeplacer(char):void
}

abstract Item{
    #posX : int
    #posY : int
    #ramasse : boolean
    +Item(int,int)
    +getPosX():int
    +getPosY():int
    +getRamasse():boolean
    +setRamasse():void
    +{abstract}typeItem():int
}

class PotionVie{
    +PotionVie(int,int)
    +typeItem():int
    
    
}

abstract Case {
    -{static} taille: int
    #posX: int
    #posY: int
    +Case()
    +getPosX():int
    +getPosY():int
    +estDedans(int,int):boolean
    +{abstract}peutTraverser():boolean
    +{abstract}typeCase():int
}

class CaseVide {
    +CaseVide(int, int)
    +toString():String
    +peutTraverser():boolean
    +typeCase():int
}

class Mur {
    +Mur(int, int)
    +toString():String
    +peutTraverser():boolean
    +typeCase():int
}

class CaseSortie {
    +CaseSortie(int, int)
    +peutTraverser():boolean
    +typeCase():int
}
class CasePiege {
    -estPasseDessus:boolean
    +CasePiege(int,int)
    +peutTraverser():boolean
    +setEstPasse():void
    +getEstPasse():boolean
    +typeCase():int
}



JeuPrincipal "1" --> "0" Labyrinthe : +labyrinthe
JeuPrincipal "1" --> "1" Aventurier : +aventurier

Entite --> "1" Labyrinthe : #lab

JeuEvolution "1" --> "1" Aventurier : -personnage
JeuEvolution ..|> Jeu
JeuEvolution "1" -->"0..*" Monstre : +monstres
JeuEvolution "1" -->"0..*" Item : +items

DessinPerso ..|> DessinJeu
DessinPerso "1" --> "0..1" JeuEvolution : -JeuEvolution

MoteurGraphique "1" --> DessinJeu : -dessin
MoteurGraphique "1" --> InterfaceGraphique : -gui
MoteurGraphique "0..*" --> Jeu : -jeu

InterfaceGraphique "1" --> Menu : +menu

PotionVie --|> Item

Aventurier --|> Entite

Labyrinthe "1" --> "0..*" Case : -cases

Monstre --|> Entite

CaseVide --|> Case

Mur --|> Case

CaseSortie--|> Case

CasePiege --|>Case

MonstreImmobile--|> Monstre

MonstreAleatoire--|> Monstre

MonstreSuivi--|> Monstre

@enduml